apps/base/stirling-pdf/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: stirling-pdf
spec:
  redirectScheme:
    scheme: https
    permanent: true
